--- a/css/calendar.css
+++ b/css/calendar.css
@@ -41,11 +41,12 @@
     padding: 8px 10px;
     margin: 12px 15px;
     border-radius: 4px;
-    background: #76a1a1;
+    background: #53b47b94;
     color: #222;
     font-size: 14px;
     font-weight: 600;
     font-family: "Avenir", sans-serif;
+    box-shadow: 0px 2px 4px rgba(2,2,2,0.2);
   }
   .row{
     width: 100%;
@@ -72,7 +73,7 @@
   }
   
   .day-add-event{
-    background: #04b6e2;
+    background: #04b6e285;
     color: rgb(114, 51, 51);
     padding: 16px;
     display: none;
@@ -158,6 +159,9 @@
      background: #74c500;
     color: #fff;
     border-color: transparent;
+    border-radius: 10px;
+    padding-right: 75px;
+    margin-right: 20px;
   }
   .event-btn--save:hover{
     box-shadow: 0px 2px 4px rgba(2,2,2,0.2);
@@ -166,6 +170,8 @@
     background: #ff5151;
     color: #fff;
     border-color: transparent;
+    border-radius: 10px;
+   
   }
   .event-btn--cancel:hover{
     box-shadow: 0px 2px 4px rgba(2,2,2,0.2);
@@ -211,7 +217,7 @@
   }
 
   .day-view-date:hover{
-    color: #04b6e2;
+    color: #04e285;
   }
   .day-inspiration-quote{
     position: absolute;
@@ -253,7 +259,7 @@
   .event-dates{
     font-weight: 800;
     font-family: 'Avenir', sans-serif;
-    color: #005b71;
+    color: #11b650;
     font-size: 18px;
     text-transform: lowercase;
   /*   position: relative; */
@@ -312,7 +318,7 @@
     color: #222;
   }
   .cview__month-last:hover,.cview__month-next:hover{
-    color: rgb(0, 116, 105);
+    color: rgb(23, 160, 114);
   }
   
   .cview__month-current{
@@ -363,7 +369,7 @@
   }
   .cview--date:hover::before{
 
-    background: rgba(0, 115, 125, 0.361);
+    background: rgba(24, 158, 125, 0.361);
   }
   .cview--date.today{
     color: #111;  
